# image-classifier

./: .dockerignore  Dockerfile  README.md
image-classifier-lib/: CMakeLists.txt
image-classifier-lib/src/: image_classifier_lib.cpp  image_classifier_lib.h
image-classifier-lib/tests/: image_classifier_lib_test.cpp
research/: mnist.ipynb  model.pt  traced_model.pt
service/: .gitignore  image-classifier.sln
service/Core/: Core.csproj  Program.cs  Startup.cs  appsettings.Development.json  appsettings.json
service/Core/Controllers/: ImageClassifierController.cs  MnistClassifierController.cs
service/Core/Exceptions/: ImageClassifierExceptions.cs  ImageClassifierFactoryExceptions.cs  ImageClassifierWorkerExceptions.cs
service/Core/Models/: IImageClassificationTask.cs  IImageClassifier.cs  IImageClassifierFactory.cs  IImageClassifierService.cs  IImageClassifierWorker.cs  IImageClassifierWorkersPool.cs  ImageClassificationPostRequest.cs  ImageClassificationTask.cs  ImageClassifierConfiguration.cs  ImageClassifierFactory.cs  ImageClassifierService.cs  ImageClassifierServiceConfiguration.cs  ImageClassifierServiceInitializer.cs  ImageClassifierWorker.cs  ImageClassifierWorkerPool.cs  MnistImageClassifier.cs
service/Core/Properties/: launchSettings.json
service/Core/Protofiles/: ImageClassifier.proto
service/Test/: ImageClassifierFactoryTest.cs  ImageClassifierServiceTest.cs  ImageClassifierWorkerPoolTest.cs  ImageClassifierWorkerTest.cs  MnistImageClassifierTest.cs  Test.csproj
service/Test/TestData/: appsettings.json
(+1 files in other folders)
